# persevere

./: .gitignore  .yamllint  Cargo.toml  README.md  THIRD_PARTY_LICENSES.md  about.toml  deny.toml  renovate.json  rustfmt.toml
.github/workflows/: ci.yml
.tools/: README.md  cargo-about-markdown-template.hbs  check-license-comments.sh
src/: compat.rs  consts.rs  download.rs  main.rs  result.rs  upload.rs
src/de/: completed_parts.rs  mod.rs
