[package]
name = "persevere"
version = "0.1.0"
edition = "2021"

authors = [
    "Pit Kleyersburg <pit.kleyersburg@takkt.com>",
    "TAKKT Industrial & Packaging GmbH <webshop-devops@kaiserkraft-europa.de>",
]
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.95"
aws-config = "1.5.14"
aws-sdk-s3 = { version = "1.70.0", features = ["http-1x"] }
clap = { version = "4.5.27", features = ["derive", "wrap_help"] }
http-body = "1.0.1"
http-body-util = "0.1.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["full", "tracing"] }
tokio-util = { version = "0.7.13", features = ["io"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
