[package]
name = "persevere"
version = "0.1.0"
edition = "2021"

authors = [
    "Pit Kleyersburg <pit.kleyersburg@takkt.com>",
    "TAKKT Industrial & Packaging GmbH <webshop-devops@kaiserkraft-europa.de>",
]
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.97"
aws-config = "1.6.1"
aws-sdk-s3 = { version = "1.82.0", features = ["http-1x"] }
clap = { version = "4.5.35", features = ["derive", "wrap_help"] }
http-body = "1.0.1"
http-body-util = "0.1.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full", "tracing"] }
tokio-util = { version = "0.7.14", features = ["io"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
